Touch transform controller now handles more than 2 displays

Touch transform controller did not work if more than 2 displays were
connected. This led to some touchscreens not working in such scenarios.

BUG=684178
COMPONENT=TouchTransformController, ChromeOS

Review-Url: https://codereview.chromium.org/2653493008
Cr-Commit-Position: refs/heads/master@{#445981}

Former-commit-id: 7830924e9af15a90939d656ee538aa145c2dd643